--- a/halls/templates/halls/add_video.html
+++ b/halls/templates/halls/add_video.html
@@ -4,7 +4,7 @@
 
 <div class="container">
     <h2>Add Video to {{ hall.title }}</h2>
-    <form action="" method="POST">
+    <form action="" method="POST" id="submit_video">
         {% csrf_token %}
         {% load widget_tweaks %}
 
@@ -22,13 +22,67 @@
             {{ field }}
         
         {% endfor %}  -->
-        <button type="submit" class="btn btn-primary" value="Create Hall">Create Hall</button>
+        <button type="submit" class="btn btn-primary" value="Create Hall">Add</button>
     </form>
 
     <h2>OR</h2>
-    <form action="">
-        {{ search_form }}
-    </form>
+    {% for field in search_form %}
+        <div class="form-group {% if field.errors %} alert alert-danger {% endif %}">
+            {{ field.errors }}
+            {{ field.label_tag }}
+            {% render_field field class="form-control" %}
+
+        </div>
+    {% endfor %}
+    
+    <div id="search_results">
+        <script>
+            var delayTimer;
+            $('#id_search_term').keyup(function() {
+                clearTimeout(delayTimer);
+                var text = $('#id_search_term').val();
+                if (text!=''){ 
+                    $('#search_results').text('Loading..');
+                } else {
+                    $('#search_results').text('');
+                }
+                delayTimer = setTimeout(function() {
+                    var text = $('#id_search_term').val();
+                    if (text!=''){
+                        $.ajax({
+                            url: '/video/search',
+                            data: {
+                                'search_term': text,
+                            },
+                            dataType: 'json',
+                            success: function(data) {
+                                var results = '';
+                                $('#search_results').text('');
+                                results += '<div class="row">';
+                                data['items'].forEach(function(video) {
+                                    results += '<div class="col-md-mt-3"><div class="card mb-4 shadow-sm">';
+                                    results += '<iframe width="100%" height="225" src="https://www.youtube.com/embed/' + video['id']['videoId'] + '" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>';
+                                    results += '<div class="card-body"><p class="card-text">'+ video['snippet']['title'] +'</p>';
+                                    results += '<a href="#" class="btn btn-primary" onclick="addVideo(\''+ video['id']['videoId'] +'\')">Add Video</a></div></div>';
+                                    
+                                });
+                                results += '</div>';
+                                $('#search_results').append(results);
+                            }
+                        });
+                    }
+                }, 1000);
+            });
+
+            function addVideo(video_id) {
+                $('#id_url').val('https://www.youtube.com/watch?v=' + video_id);
+                $('#submit_video').submit();
+            }
+
+        </script>
+    </div>
+    
+
 </div>
 
 {% endblock %}
