--- a/halls/templates/halls/create_hall.html
+++ b/halls/templates/halls/create_hall.html
@@ -6,7 +6,16 @@
     <h2>Create Hall of Fame</h2>
     <form action="" method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
+        {% load widget_tweaks %}
+
+        {% for field in form %}
+        <div class="form-group {% if field.errors %} alert alert-danger {% endif %}">
+            {{ field.errors }}
+            {{ field.label_tag }}
+            {% render_field field class="form-control" %}
+
+        </div>
+        {% endfor %} 
         <button type="submit" class="btn btn-primary" value="Create Hall">Create Hall</button>
     </form>
 </div>
