--- a/halls/templates/halls/delete_hall.html
+++ b/halls/templates/halls/delete_hall.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-    <h2>Are you sure you want to delete this Hall of Fame</h2>
+    <h2>Are you sure you want to delete this Hall of Fame?</h2>
     <form action="" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
